--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <title>KatherineDial</title>
 
         <!-- Load external CSS styles -->
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
     </head>
 
@@ -34,34 +35,41 @@
         <hr>
         <!--The photos below is art Katherine picked for her room-->
         <h2>Katherine's Favorite Decoration</h2>
-        <img src="dancer.png" alt="dancer" width="256" height="216">
-        <img src="paint.png" alt="paint" width="256" height="110">
-        <img src="flowers.png" alt="flowers" width="256" height="256">
-        <img src="butterflies2.png" alt="butterflies2" width="256" height="184">
-        <img src="butterflies.png" alt="butterflies" width="256" height="184">
-        <img id="favorite" src="rocky.png" alt="rocky" width="256" height="256">
-        <img src="trees.png" alt="trees" width="216" height="256">
-        <img src="trees2.png" alt="trees" width="256" height="159">
-        <img src="flowersOnTree.png" alt="flowersOnTree" width="183" height="256">
-        <img src="flower.png" alt="flower" width="187" height="256">
-        <img src="trees3.png" alt="trees" width="184" height="256">
-        <img src="trees4.png" alt="trees" width="184" height="256">
+        <img class="photo" src="dancer.png" alt="dancer" width="256" height="216">
+        <img class="photo" src="paint.png" alt="paint" width="256" height="110">
+        <img class="photo" src="flowers.png" alt="flowers" width="256" height="256">
+        <img class="photo" src="butterflies2.png" alt="butterflies2" width="256" height="184">
+        <img class="photo" src="butterflies.png" alt="butterflies" width="256" height="184">
+        <img class="photo" id="favorite" src="rocky.png" alt="rocky" width="256" height="256">
+        <img class="photo" src="trees.png" alt="trees" width="216" height="256">
+        <img class="photo" src="trees2.png" alt="trees" width="256" height="159">
+        <img class="photo" src="flowersOnTree.png" alt="flowersOnTree" width="183" height="256">
+        <img class="photo" src="flower.png" alt="flower" width="187" height="256">
+        <img class="photo" src="trees3.png" alt="trees" width="184" height="256">
+        <img class="photo" src="trees4.png" alt="trees" width="184" height="256">
         <hr>
         <h2 id="top-3-links-for-learning-code">Katherine's Top 3 Links for learning code</h2>
+        <div id="codelinks">
+        <h3>Links for learning code</h3>
         <ol>
             <li><a href="https://www.khanacademy.org/computing/computer-programming">Khan Academy</a></li>
             <li><a href="https://www.w3schools.com/html/">W3SChools</a></li>
             <li><a href="https://www.youtube.com/watch?v=Q33KBiDriJY">Web Development Tutorial</a></li>
         </ol>
+        </div>
+        <p>
         <a href=""https://www.khanacademy.org/computing/computer-programming>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/1/15/Khan_Academy_Logo_Old_version_2015.jpg" alt="Khan Academy Logo" width="100">
+        <img id="khanacademy" src="https://upload.wikimedia.org/wikipedia/commons/1/15/Khan_Academy_Logo_Old_version_2015.jpg" alt="Khan Academy Logo" width="100">
         </a>
+        Khan Academy is very useful for learning a variety of topics. I've had lots of experience using Khan Academy. It helped me prepare for my SAT and understand my classes better. Now, Khan Academy is helping me learn to code, and it has created the smoothest process for learning code I have encountered yet online. They have fun and informative videos. After watching a video you complete a challenge related to the video. I especially like Khan Academy because they have an easy to follow path of learning. It is also thourough and is taught by an experienced coder.
+        </p>
+        <br>
         <hr>
         <h2 id="qualities-of-rocky">Qualities of Katherine's Dog, Rocky</h2>
         <ul>
             <li>Cute</li>
             <li>White</li>
-            <li class="big-quality">Fluffy</li>
+            <li><span class="big-quality">Fluffy</span></li>
             <li>Fun</li>
             <li>Smart</li>
             <li>Small</li>
@@ -69,7 +77,7 @@
         <hr>
         <h2 id="top-three-rocky-moments">Top Three Most Favorite Rocky Moments</h2>
         <ol>
-            <li class="big-quality">When Rocky plays fetch</li>
+            <li><span class="big-quality">When Rocky plays fetch</span></li>
             <li>When Rocky goes on walks</li>
             <li>When Rocky gets pet</li>
         </ol>
@@ -102,6 +110,16 @@
                 </tr>
             </tbody>
         </table>
+        </div>
+        <hr>
+
+        <h2>Game</h2>
+        <div class="game">
+        <img id="landscape" src="try 2.jpg" alt="grass landscape" width="100%">
+        <img class="character" id="toad" src="toad1.png" alt="toad from mario" width="7%">
+        <img class="character" id="daisy" src="daisy.png" alt="daisy from mario" width="7%">
+        <img class="character" id="peach" src="peach.png" alt="peach from mario" width="7%">
+        <img class="character" id="rosalina" src="rosalina.png" alt="rosalina from mario" width="7%">
         </div>
         
         <div class="bottom">
