--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>KatherineDial</title>
 
         <!-- Load external CSS styles -->
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="styles.css">
         <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
     </head>
